<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookTravel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register_tip">带*号项为必填项</string>
    <string name="register">新用户注册</string>
    <string name="sending_request">正在发送请求</string>
    <string name="yonghumingcheng">用户名称</string>
    <string name="yonghunianling">年龄</string>
    <string name="yonghuxingbie">性别</string>
    <string name="wdhuati">我的话题</string>
    <string name="wdshuji">我的书籍</string>
    <string name="addpersonalinfo">完善个人信息</string>
    <string name="sex">性     别</string>
    <string name="wdshoucang">我的收藏</string>
    <string name="dpshuji">待评书籍</string>
    <string name="wdshuping">我的书评</string>
    <string name="shbyishi">申报遗失</string>
    <string name="plshuji">漂流书籍</string>
	<string name="topic_search">请输入要搜索关键词</string>
</resources>