<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.circleimageviewdemo_1.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
          android:background="#000000"
        android:orientation="vertical"
        tools:context="com.example.circleimageviewdemo_1.MainActivity" >

        <TextView
            android:id="@+id/yhmingcheng"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
             android:text="@string/yonghumingcheng"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#ffffff"
        android:padding="@dimen/base_padding" >

        <com.application.booktravel.widget.CircleImageView
            android:id="@+id/circleimage1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/hugh"
            app:border_color="@color/dark"
            app:border_width="2dp" />

        <TextView
            android:id="@+id/yhnianling"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="90dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/yonghunianling"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/yhxingbie"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="90dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/yonghuxingbie"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/booktravel_reg"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginLeft="160dp"
            android:src="@drawable/booktravel" />
    </RelativeLayout>
    
		<View android:layout_width="match_parent"
		    android:layout_height="10dp"
		    android:background="#efefef"
	    >
	    </View>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="30dp"
	        android:orientation="horizontal">
	         <LinearLayout 
	        android:id="@+id/linearLayout1"
	        android:layout_width="0dp"
	        android:layout_height="30dp"
	        android:layout_weight="1"
	        >
	               <ImageView
            android:id="@+id/yuan_gerenzhongxin1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:src="@drawable/gray_circle" />

	               <TextView
	                  
	                   android:id="@+id/mytopic_text1"
	                   android:layout_width="wrap_content"
	                   android:layout_height="wrap_content"
	                   android:textSize="25dp"
	                   android:text="@string/wdhuati" />

	         </LinearLayout>
	         
	          <LinearLayout 
	                android:id="@+id/linearLayout2"
	         android:layout_width="0dp"
	        android:layout_height="30dp"
	    
	        android:layout_weight="1">
	          <ImageView
            android:id="@+id/yuan_gerenzhongxin2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="0dp"
            android:src="@drawable/gray_circle" />
	           <TextView
	                   
	                   android:id="@+id/mybook_text1"
	                   android:layout_width="wrap_content"
	                   android:layout_height="wrap_content"
	                   android:textSize="25dp"
	                   android:text="@string/wdshuji" />
	        </LinearLayout>
	       
	    </LinearLayout>
	        

	    <View android:layout_width="match_parent"
		    android:layout_height="10dp"
		    android:background="#efefef"
	    >
	    </View>
	    
	    
     <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp" >
    </ListView>
   

</LinearLayout>