<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
   
    android:orientation="vertical" >
    
 <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/black"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reg_back_btn1"
            android:layout_width="70dp"
            android:layout_height="38dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/selector_btn_back"
            android:gravity="center_horizontal|center_vertical"
            android:text="返回"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            
            android:id="@+id/wodeshuji_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/wdshuji"
            android:textColor="@color/white"
            android:textSize="20.0sp" />
    </RelativeLayout>
    
 	<View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef"
	    >
	    </View>
	    
	    <LinearLayout 
	        
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	
	        >
	    <com.application.booktravel.widget.CircleImageView
	        xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/circleimage2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/hugh"
         
            />
               <TextView
	                   android:textColor="#000000"
	             android:id="@+id/mytopic_text1"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	                   android:layout_marginLeft="10dp"
	                      android:layout_gravity="center"
	                   android:textSize="20dp"
	                   android:text="@string/yonghumingcheng" />

	         </LinearLayout>
	         
	         <View android:layout_width="match_parent"
		    android:layout_height="30dp"
		    android:background="#efefef">
	   	 </View>
	   	 
	    <LinearLayout 
	          android:id="@+id/mybook_linearlayout1"
	        android:layout_width="match_parent"
	        android:layout_height="65dp"
	
	        >
	        <ImageView
	            android:layout_gravity="center"
	             android:id="@+id/yuan_wodeshuji1"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="0dp"
	         	 android:contentDescription="@null" 
	            android:src="@drawable/gray_circle"
	            >
	            </ImageView>
	        
	   
	       <TextView
	            android:textColor="#000000"
	              android:id="@+id/mytopic_text2"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:layout_marginLeft="10dp"
	              android:layout_gravity="center"
	              android:textSize="20dp"
	              android:text="@string/wdshoucang" >
	       </TextView>

	           <ImageView
	                android:layout_gravity="center"
	               android:id="@+id/array_wodeshuji2"
	               android:layout_width="50dp"
	               android:layout_height="50dp"
	               android:layout_marginLeft="160dp"
	               android:contentDescription="@null" 
	               android:src="@drawable/jiantou" >

	            </ImageView>
	             </LinearLayout>
	               <View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef">
	   	 </View>
	   	 
	    <LinearLayout 
	          android:id="@+id/mybook_linearlayout2"
	        android:layout_width="match_parent"
	        android:layout_height="65dp"
	
	        >
	        <ImageView
	            android:layout_gravity="center"
	             android:id="@+id/yuan_wodeshuji2"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="0dp"
	         	 android:contentDescription="@null" 
	            android:src="@drawable/gray_circle"
	            >
	            </ImageView>
	        
	   
	       <TextView
	            android:textColor="#000000"
	              android:id="@+id/mytopic_text3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="10dp"
	              android:layout_gravity="center"
	              android:textSize="20dp"
	              android:text="@string/plshuji" >
	       </TextView>

	           <ImageView
	                android:layout_gravity="center"
	               android:id="@+id/array_wodeshuji2"
	               android:layout_width="50dp"
	               android:layout_height="50dp"
	               android:layout_marginLeft="160dp"
	               android:contentDescription="@null"
	               android:src="@drawable/jiantou" >

	            </ImageView>
	             </LinearLayout>
	     <View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef">
	   	 </View>
	   	 
	    <LinearLayout 
	          android:id="@+id/mybook_linearlayout3"
	        android:layout_width="match_parent"
	        android:layout_height="65dp"
	
	        >
	        <ImageView
	            android:layout_gravity="center"
	             android:id="@+id/yuan_wodeshuji2"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="0dp"
	         	 android:contentDescription="@null" 
	            android:src="@drawable/gray_circle"
	            >
	            </ImageView>
	        
	   
	       <TextView
	            android:textColor="#000000"
	              android:id="@+id/mytopic_text3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="10dp"
	              android:layout_gravity="center"
	              android:textSize="20dp"
	              android:text="@string/dpshuji" >
	       </TextView>

	           <ImageView
	                android:layout_gravity="center"
	               android:id="@+id/array_wodeshuji2"
	               android:layout_width="50dp"
	               android:layout_height="50dp"
	               android:layout_marginLeft="160dp"
	               android:contentDescription="@null" 
	               android:src="@drawable/jiantou" >

	            </ImageView>
	             </LinearLayout>
	              <View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef">
	   	 </View>
	   	 
	    <LinearLayout 
	          android:id="@+id/mybook_linearlayout4"
	        android:layout_width="match_parent"
	        android:layout_height="65dp"
	
	        >
	        <ImageView
	            android:layout_gravity="center"
	             android:id="@+id/yuan_wodeshuji2"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="0dp"
	         	 android:contentDescription="@null" 
	            android:src="@drawable/gray_circle"
	            >
	            </ImageView>
	        
	   
	       <TextView
	            android:textColor="#000000"
	              android:id="@+id/mytopic_text3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="10dp"
	              android:layout_gravity="center"
	              android:textSize="20dp"
	              android:text="@string/wdshuping" >
	       </TextView>

	           <ImageView
	                android:layout_gravity="center"
	               android:id="@+id/array_wodeshuji2"
	               android:layout_width="50dp"
	               android:layout_height="50dp"
	               android:layout_marginLeft="160dp"
	               android:contentDescription="@null"
	               android:src="@drawable/jiantou" >

	            </ImageView>
	             </LinearLayout>
	              <View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef">
	   	 </View>
	   	 
	    <LinearLayout 
	          android:id="@+id/mybook_linearlayout5"
	        android:layout_width="match_parent"
	        android:layout_height="65dp"
	
	        >
	        <ImageView
	            android:layout_gravity="center"
	             android:id="@+id/yuan_wodeshuji2"
	            android:layout_width="50dp"
	            android:layout_height="50dp"
	            android:layout_marginLeft="0dp"
	         	 android:contentDescription="@null" 
	            android:src="@drawable/gray_circle"
	            >
	            </ImageView>
	        
	   
	       <TextView
	            android:textColor="#000000"
	              android:id="@+id/mytopic_text3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="10dp"
	              android:layout_gravity="center"
	              android:textSize="20dp"
	              android:text="@string/shbyishi" >
	       </TextView>

	           <ImageView
	                android:layout_gravity="center"
	               android:id="@+id/array_wodeshuji2"
	               android:layout_width="50dp"
	               android:layout_height="50dp"
	               android:layout_marginLeft="160dp"
	               android:contentDescription="@null"
	               android:src="@drawable/jiantou" >

	            </ImageView>
	             </LinearLayout>
	               <View android:layout_width="match_parent"
		    android:layout_height="20dp"
		    android:background="#efefef">
	   	 </View>
</LinearLayout>
